# password-generator

./: pyproject.toml
src/password_generator/: __init__.py  main.py
